<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Misc -->
    <string name="app_name">Student App</string>
    <string name="action_settings">Settings</string>

    <!-- Main Menu -->
    <string name="menu_add_class">+ Add Class</string>
    <string name="menu_modules">Modules</string>
        <string name="menu_modules_description">Manage the subjects you are taking</string>
    <string name="menu_todo_list">To-do list</string>
        <string name="menu_todo_list_description">Add/remove and keep track of your tasks</string>
    <string name="menu_timetable">Timetable</string>
        <string name="menu_timetable_description">View your daily class schedule</string>
    <string name="menu_games">Games</string>
        <string name="menu_games_description">Unwind with some fun games!</string>
    <string name="menu_results">Results</string>
        <string name="menu_results_description">Add/track your results and progress for your modules</string>
    <string name="menu_news">News</string>
        <string name="menu_news_description">Keep up to date with the latest stories from your college</string>

    <!-- Games -->
    <string name="games_title">Games</string>
    <string name="game_menu_snake">Snake</string>
        <string name="game_menu_snake_description">Multi-player Snake game over Bluetooth</string>

    <!-- Creating a ToDoItem -->
    <string name="new_todo_item">New ToDo Item</string>
    <string name="new_todo_title">Title:</string>

    <!-- Modules -->
    <string name="modules_title">Modules</string>

    <!-- New Class -->
    <string name="new_class_success">New Class Created</string>

    <string name="new_class">New Class</string>
    <string name="class_title">Title</string>
    <string name="class_room">Room</string>
    <string name="class_starts_at">From: </string>
    <string name="class_ends_at">to: </string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>

</resources>
