<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_horizontal_margin">

    <EditText
        android:id="@+id/class_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:imeOptions="actionNext"
        android:hint="@string/class_title" />

    <EditText
        android:id="@+id/class_room"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:imeOptions="actionNext"
        android:hint="@string/class_room" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/class_starts_at"
            android:gravity="center_vertical"/>

        <EditText
            android:id="@+id/time_from"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textIsSelectable="true"
            android:focusable="false"
            android:text="9:00"
            android:gravity="center_vertical"
            android:padding="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/class_ends_at"
            android:gravity="center_vertical"/>

        <EditText
            android:id="@+id/time_to"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textIsSelectable="true"
            android:focusable="false"
            android:text="10:00"
            android:gravity="center_vertical"
            android:padding="10dp"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/save"/>

    </LinearLayout>


</LinearLayout>